# Dinesh-Kanth

./: .gitignore  gitSetUp  git_push.exp
Bash/Bash_Documentation/: 01_Linux_Basic_And_Advanced_Commands.md  03_Bash_Scripting.md  15_Variable_Project.sh  16_Array.sh  17_Command_line_arguments.sh  18_Command_line_arguments_2.sh  19_if_else_domain_is_up_or_not.sh  20_if_else_if_system_is_online_or_not.sh  21_short_hand_if_about_file_directory.sh  25_regex_validate_email.sh  26_regex_validate_mac_address.sh  27_regex_with_special_char_validate_mac.sh  32_random_ip_addresses.txt  32_while_loop_Is_server_up.sh  33_while_enter_password.sh  38_case_example.sh  39_case_sysinfo.sh  42.select_menu_based.sh
Bash/Bash_Documentation/Documentation/: 02_About_Shell.md
Bash/Bash_Projects/calculator/: Calculator.sh
Bash/Bash_Utils/: Colors_Include.sh  alias_replace.sh
Bash/Bash_Utils/Auto_Show_Options/: 01_Auto_complete_Documentation.md  02_Auto_Complete_Script_Example.md  03_Auto_Complete.sh  03_My_App.sh
Bash_Scripts/Utils/: Colors_Include.sh  Colors_display.sh  alias_replace.sh
C_Laungauge/01_Projects/ UnfinishedProject/: CMakeLists.txt  README.md
C_Laungauge/01_Projects/ UnfinishedProject/Client/: CMakeLists.txt
C_Laungauge/01_Projects/ UnfinishedProject/Client/Source/: Client_Includes.h  Client_WebServer.c  Client_WebServer.h  Login_verify.c  Login_verify.h  Message_Linked_List.c  Message_Linked_List.h  client.c  client.h  handle_message .h  handle_message.c
C_Laungauge/01_Projects/ UnfinishedProject/Common/Source/: Common.js  a.out  file.c  file2.c  fileIO.c  fileIO.h  fill_json_from_structure.c  home.html  host_Login_page.c  login.html  script.js  styles.css  webchat.html  webchat.js
C_Laungauge/01_Projects/ UnfinishedProject/Common/include/: basic_C_Funcitons.h  colors.h  common_include.h  debugs.c  debugs.h  file_mime_type.c  file_mime_type.h  typeDef.h
C_Laungauge/01_Projects/ UnfinishedProject/Server/: CMakeLists.txt
C_Laungauge/01_Projects/ UnfinishedProject/Server/Source/: intit_Config.c  intit_Config.h  server.c  userConfig.c  userConfig.h
C_Laungauge/01_Projects/WebServer_API/: README.md  makefile  test_cases_new.xlsx
C_Laungauge/API/: API.md  Numbers_api.c  Numbers_api.i  README.md
C_Laungauge/Threads/: 01_creating_thread.c  02_wait_until_thread_done.c  03_pass_structure_to_a_thread.c  04_thread_exit.c  05_thread_exit_Message.c  06_Pthread_exit_structure.c  07_pthread_exit_upon_condition.c  08_pthread_self.c  09_thread_Cancel.c  10_pthread_cancel_Disable.c  11_pthread_cancel_deffered.c  12_pthread_detach.c
C_Laungauge/Threads/01_Pthread_Documentation/: 01_Intro_To_Pthreads.md  02_pthread_create.md  03_thread_attributes.md  04_pthread_join.md  05_pthread_exit.md  06_pthread_self.md  07_pthread_cancel.md  08_pthread_testcancel.md  09_pthread_detach.md
C_Laungauge/Threads/02_Pthread_Attributes/: 01_thread_attributes.c
C_Laungauge/Threads/03_Pthread_Mutex/: 01_mutex_lock.c  02_mutex_tryLock.c  (+2 more)
Exp_Scripts/: SSH_Login.exp
Exp_Scripts/Setup/: Generate_Password.sh  Setup.sh
Exp_Scripts/Topics/: Expect_Script_Documentation.md
Git_Help/: 04_Git_ignore.md
Linux_Files/: 01_After_Linux_Installation.sh  02_apt_and_apt-get_Differences.md  04_After_Linux_Installation.sh  After_Linux_Installation.sh  bash_aliases  bash_profile  konsole-tab-color.css
Linux_Files/Info/: 01_Ubuntu_update.md  02_Ubuntu_Appl_Remove.md  20_Ubuntu_manpage_update.md  21_tar_command.md
Python/03_Python_Notes/: 02_Comments_EscapeSequence_Print_in_Python.md  03_keywords_and_identifiers.md  04_Arithmetic_Operators_in_Python.md  04_Variable_and_DataTypes.md  05_Arithmetic_Oper_questions.md  05_Number_DataTypes.md  06_Precedence_and_Associativity_of_Operators.md  20_String_Slicing_in_Python.md  25_String_Methods_in_Python.md  27_Ascii_String_BuiltInFunc.md  29_String_Methods_Q_A.md  50_Precedence_Associativity.md  Intro_to_Python.md
Python/ArgParser/: 1.argparser_info.py  2.mutually_exclusive.py  21.ip_port_basic.py  22.caluclator.py  23.caluclator_nargs.py  3.default_usage.py  4.usage.py  5.choices.py  7.type.py
Python/Colorama/: All_combinations.py  colors.py  colors_test.py  light_reg_bold.py
Python/Installation/: Offline_Python_Installation.md  pip_Module_Offline_Installation.md  pip_Offline_Installtion.md
Python/PyPDF2/: 01_Read_pdf_Metadata_Simple.py  02_Read_MetaData_of_pdf.py  03_Write_MetaData.py  04_Extract_Text_From_Specific_Page_pdf.py  04_Extract_Text_From_pdf.py  05_Split_PDF_into_Multiple_PDFs.py  06_Split_PDF_Between_Range.py  07.get_all_pdfs.py  08_merge_pdf_list.py  09_rotate_pdf.py  10_Extract_images_from_pdf.py  11_Convert_Img_to_PDF.py
Python/ZipFile/: 01_Add_Files_to_ZIP.py  02_Extract_Files_to_Specific_Folder.py  03_ZIP_Specific_Folder.py  README.md  shutil_module_documentation.md  zipfile_module_documentation.md
(+51 files in other folders)
